api-gateway/eks-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: from0tocloud-backend
  labels:
    app: api-gateway-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: api-gateway
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/api-gateway:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
