api-gateway/eks-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: from0tocloud-backend
  labels:
    app: api-gateway-app
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
