api-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: from0tocloud-backend
  labels:
    app: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: api-gateway
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/api-gateway:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: from0tocloud-backend
  labels:
    app: api-gateway-app
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-app
  ports:
    - name: api-gateway
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: from0tocloud-backend
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /watto/api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8080
